Update build.gradle for 21 preview